# d_test_unix

./: -g  .gitignore  10  generic.hpp  test  test_Cliteral.c  test_arg.c  test_cppRef.cpp  test_crc16.c  test_deadlock.c  test_doublePtr.c  test_fileread.c  test_generic.cpp  test_gets.c  test_goto.c  test_inheritance_and_generic.cpp  test_linkedList.c  test_macro.c  test_semaphore.c  test_semaphore_systemv.c  test_stArray_init_using_preprocessor.cpp  test_strSize.c  test_strtok.c  test_toggle.c  test_typename.cpp  test_var_arg.c  text
C_DS/: Makefile
C_DS/bracket/: Makefile  bracket.h  main.c
C_DS/calculator/: Makefile
C_DS/calculator/d_hdr/: main.h
C_DS/calculator/d_src/: func.c  main.c  pth.c
C_DS/music_library/: Makefile  main.c  music.h
C_DS/phone_book/: main.c  prac2.h
IO_multiplexing/: FF_client  FF_client.c  FF_client.sh  Makefile  exec  poll  select.c  select_2.c
IO_multiplexing/SelectWithIPC/: select_2.c  server
Shell/: arg_c  arg_c.c  positional_independent_executable  study_sh.sh
cmake/: CMakeLists.txt
cmake/lib/: main.c  sum.c  test
cmake/lib/hdr/: sum.h
cmake/src/: main.c
hdr/: test_typename.h
illinois_fifo_sig/: fifo  fifo.c  fifo_client  fifo_client.c  sig  sig_handler.c
inline/: inline.c  inline.h  main  main.c
kernel/: Makefile  dma.c
